--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 102,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -548,22 +548,20 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save index column\n",
-    "index = categories.id\n",
     "# create a dataframe of the 36 individual category columns\n",
-    "categories = categories.categories.str.split(';', expand=True)\n",
+    "categories = df.categories.str.split(';', expand=True)\n",
     "categories.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +797,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +843,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>related</th>\n",
        "      <th>request</th>\n",
        "      <th>offer</th>\n",
@@ -855,6 +852,7 @@
        "      <th>search_and_rescue</th>\n",
        "      <th>security</th>\n",
        "      <th>military</th>\n",
+       "      <th>child_alone</th>\n",
        "      <th>...</th>\n",
        "      <th>aid_centers</th>\n",
        "      <th>other_infrastructure</th>\n",
@@ -871,8 +869,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -895,11 +893,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -919,8 +917,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -943,13 +941,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -967,8 +965,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -991,23 +989,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  related  request  offer  aid_related  medical_help  medical_products  \\\n",
-       "0   2        1        0      0            0             0                 0   \n",
-       "1   7        1        0      0            1             0                 0   \n",
-       "2   8        1        0      0            0             0                 0   \n",
-       "3   9        1        1      0            1             0                 1   \n",
-       "4  12        1        0      0            0             0                 0   \n",
+       "   related  request  offer  aid_related  medical_help  medical_products  \\\n",
+       "0        1        0      0            0             0                 0   \n",
+       "1        1        0      0            1             0                 0   \n",
+       "2        1        0      0            0             0                 0   \n",
+       "3        1        1      0            1             0                 1   \n",
+       "4        1        0      0            0             0                 0   \n",
        "\n",
-       "   search_and_rescue  security  military  ...  aid_centers  \\\n",
-       "0                  0         0         0  ...            0   \n",
-       "1                  0         0         0  ...            0   \n",
-       "2                  0         0         0  ...            0   \n",
-       "3                  0         0         0  ...            0   \n",
-       "4                  0         0         0  ...            0   \n",
+       "   search_and_rescue  security  military  child_alone  ...  aid_centers  \\\n",
+       "0                  0         0         0            0  ...            0   \n",
+       "1                  0         0         0            0  ...            0   \n",
+       "2                  0         0         0            0  ...            0   \n",
+       "3                  0         0         0            0  ...            0   \n",
+       "4                  0         0         0            0  ...            0   \n",
        "\n",
        "   other_infrastructure  weather_related  floods  storm  fire  earthquake  \\\n",
        "0                     0                0       0      0     0           0   \n",
@@ -1023,25 +1021,22 @@
        "3     0              0              0  \n",
        "4     0              0              0  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "for column in categories:\n",
-    "#     print(categories[column])\n",
     "    # set each value to be the last character of the string\n",
     "    categories[column] = categories[column].apply(lambda x: x[-1])\n",
     "    \n",
     "    # convert column from string to numeric\n",
     "    categories[column] = pd.to_numeric(categories[column])\n",
     "\n",
-    "# add id column back to categories\n",
-    "categories = pd.concat([index, categories], axis=1)\n",
     "categories.head()"
    ]
   },
@@ -1056,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1137,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1368,14 +1363,14 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# concatenate the original dataframe with the new `categories` dataframe\n",
-    "df = df.merge(categories)\n",
+    "df = pd.concat([df, categories], axis=1)\n",
     "df.head()"
    ]
   },
@@ -1391,16 +1386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "452"
+       "170"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1426,7 @@
        "0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
