--- a/ML Pipeline Preparation.ipynb
+++ b/ML Pipeline Preparation.ipynb
@@ -14,24 +14,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\yvesd\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\yvesd\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\yvesd\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "import re\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, make_scorer\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from joblib import parallel_backend\n",
+    "\n",
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data from database\n",
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df = \n",
-    "X = \n",
-    "Y = "
+    "engine = create_engine(r'sqlite:///DisasterResponse.db', pool_pre_ping=True)\n",
+    "df = pd.read_sql_table('CleanData', engine)\n",
+    "X = df.message\n",
+    "Y = df[df.columns[4:]]"
    ]
   },
   {
@@ -43,12 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(text):\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Normalize and tokenize message strings.\n",
+    "    \n",
+    "    Args:\n",
+    "    text: String - message text to process\n",
+    "    Returns:\n",
+    "    clean_tokens: list of strings - list of tokens from the message\n",
+    "    \"\"\"\n",
+    "    # normalize case and remove punctuation\n",
+    "    text = text = re.sub('\\W', ' ', text.lower())\n",
+    "    \n",
+    "    tokens = word_tokenize(text)\n",
+    "    stop_words = stopwords.words(\"english\")\n",
+    "    \n",
+    "    # Reduce words to their stems\n",
+    "    clean_tokens = [PorterStemmer().stem(tok).strip() for tok in tokens if tok not in stop_words]\n",
+    "\n",
+    "    return clean_tokens"
    ]
   },
   {
@@ -61,11 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = "
+    "pipeline = Pipeline([\n",
+    "               ('vect', CountVectorizer(tokenizer=tokenize) ),\n",
+    "               ('tfidf', TfidfTransformer() ),\n",
+    "               ('clf', MultiOutputClassifier(RandomForestClassifier(n_jobs=-1)) )\n",
+    "                ])"
    ]
   },
   {
@@ -79,10 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +160,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def report_results(Y_test, Y_pred):\n",
+    "    \"\"\"Report precision, recall  and f1_score for the Machine Learning Model.\"\"\"\n",
+    "        \n",
+    "    results = pd.DataFrame(columns= ['category', 'precision', 'recall', 'f1-score'])\n",
+    "        \n",
+    "    for i, category in enumerate(Y_test.columns):\n",
+    "        y_true = Y_test.iloc[:,i].values\n",
+    "        y_pred = Y_pred[:,i]\n",
+    "        \n",
+    "        row = {'category':category, \n",
+    "               'precision':precision_score(y_true, y_pred, zero_division=0, average='macro'), \n",
+    "               'recall':recall_score(y_true, y_pred, zero_division=0, average='macro'), \n",
+    "               'f1-score':f1_score(y_true, y_pred, zero_division=0, average='macro')}\n",
+    "        results = results.append(row, ignore_index=True)\n",
+    "    \n",
+    "    median_values = {'category':'median_values', \n",
+    "               'precision':results['precision'].median(), \n",
+    "               'recall':results['recall'].median(), \n",
+    "               'f1-score':results['f1-score'].median()}\n",
+    "    results = results.append(median_values, ignore_index=True)\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Writing results to DB in table \"Pipeline\".')\n",
+    "report_results(Y_test, Y_pred).to_sql('Pipeline', engine, index=False, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to remote execution of this code we will later transfer this notebook into a plain python script and write the performance results into the existing SQL database. When we transfer the data back to our local machine we're able to read out the tables and copmpare the models."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,13 +226,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = \n",
-    "\n",
-    "cv = "
+    "def f1_scorer(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Calculate median F1-Score to measure model performance.\n",
+    "    Args:\n",
+    "    y_true: DataFrame containing the actual labels\n",
+    "    y_pred: Array containing the predicted labels\n",
+    "    Returns:\n",
+    "    f1_score: Float representing the median F1-Score for the model.\n",
+    "    \"\"\"\n",
+    "    scores = []\n",
+    "        \n",
+    "    for i in range(y_pred.shape[1]):\n",
+    "        scores.append(f1_score(np.array(y_true)[:,i], y_pred[:,i], zero_division=0, average='macro'))\n",
+    "    score = np.median(scores)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {\n",
+    "    'vect__ngram_range': [(1,1), (1,2), (1,4)],\n",
+    "    'clf__estimator__min_samples_leaf':[1, 5],\n",
+    "    'clf__estimator__class_weight': [None, 'balanced'],\n",
+    "    'clf__estimator__n_estimators': [50, 100, 200]         \n",
+    "    }\n",
+    "scorer = make_scorer(f1_scorer)\n",
+    "cv = GridSearchCV(pipeline, param_grid=parameters, scoring=scorer, verbose=3)"
    ]
   },
   {
@@ -130,10 +275,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "[CV] clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1) ....\n",
+      "[CV] clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1) ....\n",
+      "[CV] clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1) ....\n",
+      "[CV] clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1) ....\n",
+      "[CV] clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1) ....\n",
+      "[CV]  clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1), score=nan, total=   0.1s\n",
+      "[CV]  clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1), score=nan, total=   0.1s\n",
+      "[CV]  clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1), score=nan, total=   0.1s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   2 out of   5 | elapsed:    0.0s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1), score=0.548, total= 5.0min\n",
+      "[CV]  clf__estimator__min_samples_leaf=1, vect__ngram_range=(1, 1), score=0.541, total= 5.1min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:  5.1min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get results of grid search\n",
+    "data = {'parameter': list(cv.best_params_.keys()),\n",
+    "        'value': [str(value) for value in cv.best_params_.values()]}\n",
+    "cv_results = pd.DataFrame(data)\n",
+    "cv_results = cv_results.append(\n",
+    "    {'parameter': 'median f1-score','value': np.max(cv.cv_results_['mean_test_score'])},\n",
+    "    ignore_index=True)\n",
+    "print('Writing results of GridSearch.fit to DB in table \"GsFit\".')\n",
+    "cv_results.to_sql('GsFit', engine, index=False, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Y_pred = cv.predict(X_test)\n",
+    "print('Writing results of GridSearch.predict to DB in table \"GsPredict\".')\n",
+    "report_results(Y_test, Y_pred).to_sql('GsPredict', engine, index=False, if_exists='replace')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,7 +365,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "balanced_pipeline = Pipeline([\n",
+    "               ('vect', CountVectorizer(tokenizer=tokenize) ),\n",
+    "               ('tfidf', TfidfTransformer() ),\n",
+    "               ('clf', MultiOutputClassifier(BalancedRandomForestClassifier(n_jobs=-1) ))\n",
+    "                ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = ['vect__ngram_range',\n",
+    "        'clf__estimator__min_samples_leaf',\n",
+    "        'clf__estimator__class_weight',\n",
+    "        'clf__estimator__n_estimators']\n",
+    "values = [cv.get_params(True)[key] for key in keys]\n",
+    "tuning_params = dict(zip(keys, values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balanced_pipeline.set_params(\n",
+    "    vect__ngram_range = tuning_params['vect__ngram_range'],\n",
+    "    clf__estimator__min_samples_leaf = tuning_params['clf__estimator__min_samples_leaf'],\n",
+    "    clf__estimator__class_weight = tuning_params['clf__estimator__class_weight'],\n",
+    "    clf__estimator__n_estimators = tuning_params['clf__estimator__n_estimators']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balanced_pipeline.fit(X_train, Y_train)\n",
+    "Y_pred = balanced_pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Writing results of BalancedPipeline to DB in table \"BalancedPipeline\".')\n",
+    "report_results(Y_test, Y_pred).to_sql('BalancedPipeline', engine, index=False, if_exists='replace')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,7 +433,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Saving models in pickle files.')\n",
+    "pickle.dump(cv, open('disaster_model.pkl', 'wb'))\n",
+    "pickle.dump(balanced_pipeline, open('balanced_model.pkl', 'wb'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
