--- a/ML Pipeline Preparation.ipynb
+++ b/ML Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data from database\n",
-    "engine = create_engine(r'sqlite:///DisasterResponse.db', pool_pre_ping=True)\n",
+    "engine = create_engine(r'sqlite:///data/DisasterResponse.db', pool_pre_ping=True)\n",
     "df = pd.read_sql_table('CleanData', engine)\n",
     "X = df.message\n",
     "Y = df[df.columns[4:]]"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
